# mcp-nckuhub-server

./: .pre-commit-config.yaml  LICENSE  README.md  README_zh-TW.md  pyproject.toml
.github/workflows/: black.yaml  lint.yaml
src/mcp_nckuhub_server/: server.py
src/mcp_nckuhub_server/prompts/: __init__.py  parser.py
src/mcp_nckuhub_server/tools/: search.py
src/nckuhub_mcp/: server.py
src/nckuhub_mcp/prompts/: __init__.py  parser.py
src/nckuhub_mcp/tools/: __init__.py  fetch.py  search.py
src/nckuhub_mcp/utils/: __init__.py  fetch.py  search.py
tests/: test_server.py
